--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
   <title>CV Mickael BAGUET</title>
 </head>
 <body>
-  <!-- Container prenant l'intégralité du body -->
+  <!-- Container prenant l'intégralité du body, rajout commentaire pour test conflit github -->
   <div class="container-fluid">
     <!-- jumbotron : boite servant de haut de page -->
     <div class="jumbotron jumbotron-fluid">
