--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 <body>
   <!-- Container prenant l'intégralité du body, rajout commentaire pour test conflit github -->
   <div class="container-fluid">
-    <!-- jumbotron : boite servant de haut de page -->
+    <!-- jumbotron : boite servant de haut de page modification branche test-->
     <div class="jumbotron jumbotron-fluid">
       <div class="text-center">
         <h1>MICKAEL BAGUET</h1>
